  [Michele Simionato]
  * Extended the ebrisk calculator to compute at the same time both the
    aggregate curves by tag and the total curves

  [Marco Pagani]
  * Implemented Morikawa and Fujiwara (2013) GMM

  [Michele Simionato]
  * Changed the seed algorithm in sampling with more than one source model,
    thus avoiding using more GMPEs than needed in some cases
  * If `ground_motion_fields=false` is set, the GMFs are not stored even
    if `hazard_curves_from_gmfs=true`
  * `oq show job_info` now works while the calculation is running
  * Reduced the sent data transfer in ebrisk calculations
  * Replaced the `pointsource_distance` concept with a `collapse_distance`
  * Deprecated the old syntax for the `reqv` feature
  * Added short aliases for hazard statistics `mean`, `max` and `std`
  * Reduced substantially the memory occupation in the task queue
  * Added an API `/extract/sources` and an experimental `oq plot sources`
  * Added a check on valid input keys in the job.ini
  * Fixed the check on dependent calculations
  * Specifying at the same time both a grid and individual sites is an error

  [Daniele Viganò]
  * Docker containers rebased on CentOS 8
  * Fixed an issue causing zombie `ssh` processes
    when using `zmq` as task distribution mechanism
  * Introduced support for RHEL/CentOS 8

  [Michele Simionato]
  * Added a check for no GMFs in event_based_risk
  * Avoided transferring the site collection
  * Storing the sources in TOML format

python3-oq-engine (3.7.0-1~xenial01) xenial; urgency=low

  [Michele Simionato]
  * Hiding calculations that fail before the pre-execute phase (for instance,
    because of missing files); they already give a clear error
  * Added an early check on truncation_level in presence of correlation model

  [Guillaume Daniel]
  * Implemented Ameri (2017) GMPE

  [Michele Simionato]
  * Changed the ruptures CSV exporter to use commas instead of tabs
  * Added a check forbidding `aggregate_by` for non-ebrisk calculators